# internal/models/models.go
@@ -256,6 +256,8 @@ func All() []any {
 		&AccessJob{},
 		&AccessRequest{},
 		&AccessRequestStateHistory{},
+		&AccessRiskVerdict{},
+		&AccessRequestAnomalyFlag{},
 		&AccessGrant{},
 		&AccessReview{},
 		&AccessReviewItem{},
